--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500&display=swap');
 *{
 	margin:0;
 	padding:0;
 	box-sizing: border-box;
+}
+
+.data-board {
+    display: flex;
+    justify-content: center;
+    margin-top: 1em;
+}
+
+.chart {
+    width: 900px;
+    height: 450px;
+    background: beige;
+}
+
+h1.title {
+    text-align: center;
+    font-size: 3em;
+    font-weight: 300;
+    line-height: 80px;
+}
+
+.container {
+    width: 1000px;
+    height: 600px;
+    background: white;
+    border: 1px solid #b3b3b3;
+    box-shadow: 0px 0px 10px #808080;
+    border-radius: 5px;
+}
+
+div#app {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: dimgrey;
+    font-family: 'Montserrat', sans-serif;
 }
